--- a/css/style.css
+++ b/css/style.css
@@ -19,4 +19,57 @@ body{
     font-size: 18px;
     background-color: #C4DEFD;
     color: #fff;
+
+}
+.theme-button{
+  background: #4F9CF9;
+  border-radius: 8px;
+  padding: 16px 24px !important; 
+
+}
+.theme-button-two{
+  background: #FFE492;
+  border-radius: 18px;
+  color: #043873 !important;
+  margin-right: 20px;
+  margin-left: 20px;
+  padding: 16px 28px !important;
+}
+.theme-button img{
+  margin-left: 10px;
+}
+/* header css*/
+.headerarea {
+  background-color: #043873;
+  padding: 16px 0;
+
+}
+.headerarea .nav-link{
+  color: #fff;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 500;
+  border-radius: 8px;
+  padding: 16px 8px;
+  font-size: 18px !important;
+}
+@media (max-width: 991px) {
+  .theme-button{
+  width: 100%;
+  text-align: center;
+  margin-top: 10px;
+  }
+  .theme-button-two{
+    margin-left: 0;
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+  }
+  .headerarea .nav-link{
+    color: #fff;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 500;
+    border-radius: 8px;
+    padding: 10px;
+    font-size: 18px !important;
+  }
 }
