--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,81 @@ font-size: 45px;
   margin-bottom: 50px;
   }
 }
+
+/* management area css*/
+.management{
+  background-color: #fff;
+  padding: 70px 0;
+}
+.management .row{
+  padding: 30px 0;
+}
+.management .project-text{
+  color: #212529;
+}
+.management .project-text h3{
+  font-weight: 700;
+font-size: 55px;
+}
+.management .project-text h3 span{
+  position: relative;
+  z-index: 1;
+}
+.management .project-text h3 span::after{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 25px;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  background-image: url(element.png);
+  background-repeat: no-repeat;
+}
+.management .work-text{
+  color: #212529;
+  padding-left: 40px;
+}
+.management .work-text h3{
+  font-weight: 700;
+font-size: 45px;
+}
+.management .work-text h3 span{
+  position: relative;
+  z-index: 1;
+}
+.management .work-text h3 span::after{
+  position: absolute;
+  content: "";
+  width: 110%;
+  height: 30px;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  background-image: url(element.png);
+  background-repeat: no-repeat;
+}
+
+
+@media (max-width: 991px) {
+  .management .project-text{
+    text-align: center;
+    padding-bottom: 30px;
+  }
+  .management .project-text h3{
+    font-size: 36px;
+    z-index: -1;
+    padding-bottom: 10px;
+  }
+  .management .work-text{
+    text-align: center;
+    
+  }
+  .management .work-text h3{ 
+    font-size: 36px;
+}
+.management .hero-image{
+  size: 50%;
+  margin-top: 50px;
+}
+}
