--- a/css/style.css
+++ b/css/style.css
@@ -405,3 +405,60 @@ color: #fff;
     padding-bottom: 50px;
   }
 }
+
+/*your work css*/
+.your-work{
+  background-color: #043873;
+  padding: 80px 0;
+}
+.your-work .project-text h3{
+font-size: 45px;
+}
+.your-work .project-text h3 span{
+  position: relative;
+ 
+  z-index: 1;
+}
+.your-work .project-text h3 span::after{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 15px;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  background-image: url(element-2.png);
+  background-repeat: no-repeat;
+} 
+
+
+/*your data section*/
+.your-data{
+  background-color: #fff;
+  padding: 70px 0;
+}
+.your-data .row{
+  padding: 30px 0;
+}
+.your-data .project-text{
+  color: #212529;
+}
+.your-data .project-text h3{
+  font-weight: 700;
+font-size: 55px;
+}
+.your-data .project-text h3 span{
+  position: relative;
+  z-index: 1;
+}
+.your-data .project-text h3 span::after{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 25px;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  background-image: url(element.png);
+  background-repeat: no-repeat;
+}
