--- a/css/style.css
+++ b/css/style.css
@@ -462,3 +462,49 @@ font-size: 55px;
   background-image: url(element.png);
   background-repeat: no-repeat;
 }
+
+@media (max-width: 991px){
+  .your-data .data-text{
+    text-align: center;
+    padding-bottom: 50px;
+  }
+  .your-data .hero-image{
+    padding-top: 50px;
+  }
+}
+
+/* our sponsors css*/
+.our-sponsors{
+  background-color: #fff;
+  padding: 40px 0;
+}
+.our-sponsors .project-text h3{
+  font-weight: 700;
+font-size: 55px;
+padding: 30px 0;
+color: #212529;
+}
+.our-sponsors .project-text h3 span{
+  position: relative;
+  z-index: 1;
+}
+.our-sponsors .project-text h3 span::after{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 25px;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  background-image: url(element.png);
+  background-repeat: no-repeat;
+}
+.our-sponsors .sponsor-img{
+  height: 40px;
+  width: auto;
+}
+@media (max-width: 991px){
+  .our-sponsors .sponsor-img{
+    margin: 50px 0;
+  }
+}
