--- a/css/style.css
+++ b/css/style.css
@@ -529,3 +529,75 @@ color: #212529;
     padding: 700px 0;
   }
   }
+
+  /* what our clent's css*/
+  .what-our{
+    background-color: #fff;
+    padding: 70px 0;
+    color: #212529;
+  }
+  .what-our .project-text h3{
+    font-weight: 700;
+  font-size: 55px;
+  padding: 40px 0;
+  color: #212529;
+  }
+
+  .what-our .project-text h3 span{
+    position: relative;
+    z-index: 1;
+  }
+  .what-our .project-text h3 span::after{
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 25px;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    background-image: url(element.png);
+    background-repeat: no-repeat;
+  }
+.what-our{
+  padding: 50px 0;
+}
+.what-our .single-testimonial{
+  background: #FFFFFF;
+box-shadow: 15px 10px 50px rgba(0, 0, 0, 0.1);
+border-radius: 10px;
+padding: 40px 20px;;
+}
+.what-our .single-testimonial .textimonial-text p{
+  padding: 30px 0;
+}
+.what-our .single-testimonial .textimonial-quote h5{
+  padding: 20px 0;
+}
+
+.what-our .single-testimonial2{
+ background: #4F9CF9;
+ color: #FFFFFF;
+border-radius: 10px;
+border-radius: 10px;
+padding: 40px 20px;;
+}
+.what-our .single-testimonial2 .textimonial-text p{
+  padding: 30px 0;
+}
+.what-our .single-testimonial2 .textimonial-quote h5{
+  padding: 20px 0;
+}
+
+.what-our .single-testimonial3{
+background: #4F9CF9;
+color: #fff;
+border-radius: 10px;
+border-radius: 10px;
+padding: 40px 20px;;
+}
+.what-our .single-testimonial3 .textimonial-text p{
+  padding: 30px 0;
+}
+.what-our .single-testimonial3 .textimonial-quote h5{
+  padding: 20px 0;
+}
